@@ -36,71 +36,30 @@ typedef enum
 
 typedef void (*GcomprisSoundCallback) (gchar *);
 
+void	 gc_sound_init(void);
+
 void	 gc_sound_play_ogg(const gchar *, ...);
 void	 gc_sound_play_ogg_cb(const gchar *, GcomprisSoundCallback);
 void	 gc_sound_play_ogg_list( GList* files );
+
 void	 gc_sound_policy_set(int);
 int	 gc_sound_policy_get(void);
-void	 gc_sound_init(void);
+
 void	 gc_sound_reopen(void);
 void	 gc_sound_bg_reopen(void);
 void	 gc_sound_fx_reopen(void);
+
 void	 gc_sound_close(void);
 void	 gc_sound_bg_close(void);
 void	 gc_sound_fx_close(void);
+
 void	 gc_sound_bg_pause(void);
 void	 gc_sound_fx_pause(void);
-void	 gc_sound_bg_pause(void);
-void	 gc_sound_fx_pause(void);
+
 void	 gc_sound_bg_resume(void);
 void	 gc_sound_fx_resume(void);
 
-int	 decode_ogg_file(char *infile);
+gchar   *gc_sound_alphabet(gchar *chars);
 
-gchar *gc_sound_alphabet(gchar *chars);
-
-
-/*************************************************************/
-/* GObject to  control sound. code get from maman-file.h     */
-/*************************************************************/
-/*
- * Potentially, include other headers on which this header depends.
- */
-#include <glib-object.h>
-
-#define GCOMPRIS_SOUND_TYPE 	  (gc_sound_get_type ())
-#define GCOMPRIS_SOUND(obj)		  (G_TYPE_CHECK_INSTANCE_CAST ((obj), GCOMPRIS_SOUND_TYPE, GcomprisSound))
-#define GCOMPRIS_SOUND_CLASS(klass)	  (G_TYPE_CHECK_CLASS_CAST ((klass), GCOMPRIS_SOUND_TYPE, GcomprisSoundClass))
-#define GCOMPRIS_SOUND_IS(obj)	  (G_TYPE_CHECK_INSTANCE_TYPE ((obj),  GCOMPRIS_SOUND_TYPE))
-#define GCOMPRIS_SOUND_IS_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), GCOMPRIS_SOUND_TYPE))
-#define GCOMPRIS_SOUND_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), GCOMPRIS_SOUND_TYPE, GcomprisSoundClass))
-
-typedef struct _GcomprisSound GcomprisSound;
-typedef struct _GcomprisSoundClass GcomprisSoundClass;
-typedef struct _GcomprisSoundPrivate GcomprisSoundPrivate;
-
-struct _GcomprisSound {
-	GObject parent;
-	/* instance members */
-        GcomprisSoundPrivate *private;
-};
-
-struct _GcomprisSoundClass {
-	GObjectClass parent;
-
-        guint sound_played_signal_id;
-        void (*sound_played) (GcomprisSound *self, gchar *file, gpointer user_data);
-};
-
-/* used by MAMAN_TYPE_FILE */
-GType gc_sound_get_type (void);
-
-/* API. */
-
-/* empty for now */
-
-
-/* Declaration of GCompris Sound Controller */
-extern GObject *gc_sound_controller;
 
 #endif
